--- a/assets/img/icons/manifest.json
+++ b/assets/img/icons/manifest.json
@@ -1,5 +1,5 @@
 {
- "name": "App",
+ "name": "Offy - caminho mais curto para os descontos",
  "icons": [
   {
    "src": "\/android-icon-36x36.png",
